@@ -8,6 +8,48 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> e1000070 	hlt	0x0000
 0[0-9a-f]+ <[^>]+> e100007f 	hlt	0x000f
 0[0-9a-f]+ <[^>]+> e10fff70 	hlt	0xfff0
+0[0-9a-f]+ <[^>]+> e1c0fc90 	strlb	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e1c1fc91 	strlb	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e1cefc9e 	strlb	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e1e0fc90 	strlh	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e1e1fc91 	strlh	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e1eefc9e 	strlh	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e180fc90 	strl	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e181fc91 	strl	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e18efc9e 	strl	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e1ce0e91 	strlexb	r0, r1, \[lr\]
+0[0-9a-f]+ <[^>]+> e1c01e9e 	strlexb	r1, lr, \[r0\]
+0[0-9a-f]+ <[^>]+> e1c1ee90 	strlexb	lr, r0, \[r1\]
+0[0-9a-f]+ <[^>]+> e1ee0e91 	strlexh	r0, r1, \[lr\]
+0[0-9a-f]+ <[^>]+> e1e01e9e 	strlexh	r1, lr, \[r0\]
+0[0-9a-f]+ <[^>]+> e1e1ee90 	strlexh	lr, r0, \[r1\]
+0[0-9a-f]+ <[^>]+> e18e0e91 	strlex	r0, r1, \[lr\]
+0[0-9a-f]+ <[^>]+> e1801e9e 	strlex	r1, lr, \[r0\]
+0[0-9a-f]+ <[^>]+> e181ee90 	strlex	lr, r0, \[r1\]
+0[0-9a-f]+ <[^>]+> e1ae0e92 	strlexd	r0, r2, r3, \[lr\]
+0[0-9a-f]+ <[^>]+> e1a01e9c 	strlexd	r1, ip, sp, \[r0\]
+0[0-9a-f]+ <[^>]+> e1a1ee90 	strlexd	lr, r0, r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e1d00c9f 	ldrab	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e1d11c9f 	ldrab	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e1deec9f 	ldrab	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e1f00c9f 	ldraexh	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e1f11c9f 	ldraexh	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e1feec9f 	ldraexh	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e1900c9f 	ldra	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e1911c9f 	ldra	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e19eec9f 	ldra	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e1d00e9f 	ldraexb	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e1d11e9f 	ldraexb	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e1deee9f 	ldraexb	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e1f00e9f 	ldraexh	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e1f11e9f 	ldraexh	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e1feee9f 	ldraexh	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e1900e9f 	ldraex	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e1911e9f 	ldraex	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e19eee9f 	ldraex	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e1b00e9f 	ldraexd	r0, r1, \[r0\]
+0[0-9a-f]+ <[^>]+> e1b12e9f 	ldraexd	r2, r3, \[r1\]
+0[0-9a-f]+ <[^>]+> e1bece9f 	ldraexd	ip, sp, \[lr\]
 0[0-9a-f]+ <[^>]+> bf50      	sevl
 0[0-9a-f]+ <[^>]+> bf50      	sevl
 0[0-9a-f]+ <[^>]+> f3af 8005 	sevl.w
@@ -16,3 +58,45 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> f78f 8003 	dcps3
 0[0-9a-f]+ <[^>]+> ba80      	hlt	0x0000
 0[0-9a-f]+ <[^>]+> babf      	hlt	0x003f
+0[0-9a-f]+ <[^>]+> e8c0 0f8f 	strlb	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e8c1 1f8f 	strlb	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e8ce ef8f 	strlb	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e8c0 0f9f 	strlh	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e8c1 1f9f 	strlh	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e8ce ef9f 	strlh	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e8c0 0faf 	strl	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e8c1 1faf 	strl	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e8ce efaf 	strl	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e8ce 1fc0 	strlexb	r0, r1, \[lr\]
+0[0-9a-f]+ <[^>]+> e8c0 efc1 	strlexb	r1, lr, \[r0\]
+0[0-9a-f]+ <[^>]+> e8c1 0fce 	strlexb	lr, r0, \[r1\]
+0[0-9a-f]+ <[^>]+> e8ce 1fd0 	strlexh	r0, r1, \[lr\]
+0[0-9a-f]+ <[^>]+> e8c0 efd1 	strlexh	r1, lr, \[r0\]
+0[0-9a-f]+ <[^>]+> e8c1 0fde 	strlexh	lr, r0, \[r1\]
+0[0-9a-f]+ <[^>]+> e8ce 1fe0 	strlex	r0, r1, \[lr\]
+0[0-9a-f]+ <[^>]+> e8c0 efe1 	strlex	r1, lr, \[r0\]
+0[0-9a-f]+ <[^>]+> e8c1 0fee 	strlex	lr, r0, \[r1\]
+0[0-9a-f]+ <[^>]+> e8ce 11f0 	strlexd	r0, r1, r1, \[lr\]
+0[0-9a-f]+ <[^>]+> e8c0 eef1 	strlexd	r1, lr, lr, \[r0\]
+0[0-9a-f]+ <[^>]+> e8c1 00fe 	strlexd	lr, r0, r0, \[r1\]
+0[0-9a-f]+ <[^>]+> e8d0 0f8f 	ldrab	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e8d1 1f8f 	ldrab	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e8de ef8f 	ldrab	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e8d0 0f9f 	ldrah	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e8d1 1f9f 	ldrah	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e8de ef9f 	ldrah	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e8d0 0faf 	ldra	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e8d1 1faf 	ldra	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e8de efaf 	ldra	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e8d0 0fcf 	ldraexb	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e8d1 1fcf 	ldraexb	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e8de efcf 	ldraexb	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e8d0 0fdf 	ldraexh	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e8d1 1fdf 	ldraexh	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e8de efdf 	ldraexh	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e8d0 0fef 	ldraex	r0, \[r0\]
+0[0-9a-f]+ <[^>]+> e8d1 1fef 	ldraex	r1, \[r1\]
+0[0-9a-f]+ <[^>]+> e8de efef 	ldraex	lr, \[lr\]
+0[0-9a-f]+ <[^>]+> e8d0 01ff 	ldraexd	r0, r1, \[r0\]
+0[0-9a-f]+ <[^>]+> e8d1 1eff 	ldraexd	r1, lr, \[r1\]
+0[0-9a-f]+ <[^>]+> e8de e0ff 	ldraexd	lr, r0, \[lr\]
